@@ -10,7 +10,6 @@ import java.io.File;
 import java.lang.Math;
 import java.nio.IntBuffer;
 import java.util.*;
-import java.util.stream.Collectors;
 
 import static org.lwjgl.assimp.Assimp.*;
 import static org.vulkanb.eng.EngineUtils.*;
@@ -36,7 +35,7 @@ public class ModelLoader {
         }
         Matrix4f nodeGlobalTransform = new Matrix4f(parentTransformation).mul(nodeTransform);
 
-        List<Bone> affectedBones = boneList.stream().filter(b -> b.boneName().equals(nodeName)).collect(Collectors.toList());
+        List<Bone> affectedBones = boneList.stream().filter(b -> b.boneName().equals(nodeName)).toList();
         for (Bone bone : affectedBones) {
             Matrix4f boneTransform = new Matrix4f(globalInverseTransform).mul(nodeGlobalTransform).
                     mul(bone.offsetMatrix());
